--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.application filter=lfs diff=lfs merge=lfs -text
-*.manifest filter=lfs diff=lfs merge=lfs -text
-*.exe filter=lfs diff=lfs merge=lfs -text
-*.dll filter=lfs diff=lfs merge=lfs -text
+*.exe binary
+*.dll binary
+*.application binary
+*.manifest binary
